adicionei os codigos

--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 body{
-  font-famyli:Popins
+  font-famyli:  'Poppins ', 'Courier New ',Courier, monoespace;
+  background-color: #1f1d2b;
+}
+
+.clock {
+  position:absolute;
+  top: 50%;
+  left:50%;
+  transform: translateX(-50%) translateY(-50%);
+  color: #ffd791;
+  font-size: 60px; 
+  letter-spacing: 7px;
+}
